--- a/index.html
+++ b/index.html
@@ -66,6 +66,8 @@
         <p class="mb-1">With general engineering knowledge, Mayar began his research experience in the fields of econometric modelling of travel demand, transport markets pricing and evaluation, and network performance and equilibrium. He also gained expertise in nonlinear structural mechanics and computational engineering methods.</p>        
         <p class="mb-1">Mayar is a student member at <a href="https://www.theiet.org" target="_blank" class="color-alt">IET</a>, <a href="https://www.ice.org.uk" target="_blank" class="color-alt">ICE</a>, and a permanent CEM YPN member of <a href="https://www.iucn.org/our-union/commissions/group/iucn-wcpa-young-professionals" target="_blank" class="color-alt">IUCN</a>, where he is part of the Urban and Mediterranean-type Ecosystems task forces.</p>
         <p class="mb-1">
+        - <a href="mailto:mayar313@mit.edu" class="color-alt">Email</a> 
+        <p class="mb-1">  
         - <a href="https://www.linkedin.com/in/mayar-ariss/" class="color-alt">LinkedIn</a>
       </p>
     </div>
