--- a/index.html
+++ b/index.html
@@ -40,18 +40,18 @@
 
   <div id="projects" class="content scrollable-area">
     <div class="d-flex sticky-top bg-main text-uppercase">
-      <div class="col-title">Title</div>
+      <div class="flex-grow-1 col-title">Title</div>
       <div class="col-client d-none d-md-block">Institution</div>
       <div class="col-date">Date</div>
     </div>
     <div id="project-list scrollable-content">
                               <a href="london_hyperloc.html" target="_blank" class="project d-flex " data-type="Animation">
-          <div class="col-title position-relative">Hyperlocal Last-mile Distribution Network</div>
+          <div class="flex-grow-1 col-title position-relative">Hyperlocal Last-mile Distribution Network</div>
           <div class="col-client d-none d-md-block">IMPERIAL COLLEGE LONDON</div>
           <div class="col-date">2022</div>
         </a>
                               <a href="nlsaadaptic.com" target="_blank" class="project d-flex " data-type="Animation">
-          <div class="col-title position-relative">loading...</div>
+          <div class="flex-grow-1 col-title position-relative">loading...</div>
           <div class="col-client d-none d-md-block"></div>
           <div class="col-date">2022</div>
         </a>
