--- a/index.html
+++ b/index.html
@@ -45,8 +45,8 @@
       <div class="col-date">Date</div>
     </div>
     <div id="project-list scrollable-content">
-                              <a href="london_hyperloc.html" target="_blank" class="project d-flex " data-type="Animation">
-          <div class="flex-grow-1 col-title position-relative">Hyperlocal Last-mile Distribution Network</div>
+                              <a href="mail_drones.html" target="_blank" class="project d-flex " data-type="Animation">
+          <div class="flex-grow-1 col-title position-relative">Mail Drones</div>
           <div class="col-client d-none d-md-block">IMPERIAL COLLEGE LONDON</div>
           <div class="col-date">2022</div>
         </a>
