--- a/mail_drones.html
+++ b/mail_drones.html
@@ -203,12 +203,12 @@
                 }
                 </style>
                 <div id="cf4a" class="shadow">
-                  <img src="mail_drones/images/potential_locations10.svg" />
-                  <img src="mail_drones/images/potential_locations8.svg" />
-                  <img src="mail_drones/images/potential_locations6.svg" />
-                  <img src="mail_drones/images/potential_locations4.svg" />
-                  <img src="mail_drones/images/potential_locations2.svg" />
-                  <img src="mail_drones/images/potential_locations.svg" />
+                  <img class= "img-responsive class"  src="mail_drones/images/potential_locations10.svg"  />
+                  <img class= "img-responsive class" src="mail_drones/images/potential_locations8.svg" />
+                  <img class= "img-responsive class" src="mail_drones/images/potential_locations6.svg" />
+                  <img class= "img-responsive class" src="mail_drones/images/potential_locations4.svg" />
+                  <img class= "img-responsive class" src="mail_drones/images/potential_locations2.svg" />
+                  <img class= "img-responsive class" src="mail_drones/images/potential_locations.svg" />
                 </div>
            
 </div>          
