--- a/mail_drones.html
+++ b/mail_drones.html
@@ -134,7 +134,7 @@
                 
                 #cf4a {
                   position:relative;
-                  height:700px;
+                  height:600px;
                   width:1200px;
                   margin:0 auto;
                 }
@@ -204,13 +204,13 @@
                 }
                 </style>
 
-                <div id="cf4a" class= "parent">
-                  <img class= " responsive center"  src="mail_drones/images/SVGCropFiles/potential_locations10.svg"  />
-                  <img class= " responsive center" src="mail_drones/images/SVGCropFiles/potential_locations8.svg" />
-                  <img class= " responsive center" src="mail_drones/images/SVGCropFiles/potential_locations6.svg" />
-                  <img class= " responsive center" src="mail_drones/images/SVGCropFiles/potential_locations4.svg" />
-                  <img class= " responsive center" src="mail_drones/images/SVGCropFiles/potential_locations2.svg" />
-                  <img class= " responsive center" src="mail_drones/images/SVGCropFiles/potential_locations.svg" />
+                <div id="cf4a" class= "photo imageAlign ">
+                  <img class= "img-responsive class" src="mail_drones/images/cropped/potential_locations10.png" />
+                  <img class= "img-responsive class" src="mail_drones/images/cropped/potential_locations8.png" />
+                  <img class= "img-responsive class" src="mail_drones/images/cropped/potential_locations6.png" />
+                  <img class= "img-responsive class" src="mail_drones/images/cropped/potential_locations4.png" />
+                  <img class= "img-responsive class" src="mail_drones/images/cropped/potential_locations2.png" />
+                  <img class= "img-responsive class" src="mail_drones/images/cropped/potential_locations.png" />
                 </div>
            </div>
 </div>          
