--- a/mail_drones.html
+++ b/mail_drones.html
@@ -38,14 +38,9 @@
         <div class="logo_area">
             <h1>
               <a href="https://transport-systems.imperial.ac.uk" class="home_btn">
-                <img src="mail_drones/images/tsl_logo.png" width="100" />
+                <img src="mail_drones/images/tsl_logo.png" width="70"/>
               </a>
             </h1>
-        </div>
-        <div class="lab_logo_area">
-            <a href="https://transport-systems.imperial.ac.uk" class="home_btn" target="_blank">
-              <img src="mail_drones/images/tsl_logo.png" width="100" />
-            </a>
         </div>
         <hr />
     </header>
@@ -134,7 +129,7 @@
                 
                 #cf4a {
                   position:relative;
-                  height:600px;
+                  height:700px;
                   width:1200px;
                   margin:0 auto;
                 }
@@ -205,12 +200,12 @@
                 </style>
 
                 <div id="cf4a" class= "photo imageAlign ">
-                  <img class= "img-responsive class" src="mail_drones/images/cropped/potential_locations10.png" />
-                  <img class= "img-responsive class" src="mail_drones/images/cropped/potential_locations8.png" />
-                  <img class= "img-responsive class" src="mail_drones/images/cropped/potential_locations6.png" />
-                  <img class= "img-responsive class" src="mail_drones/images/cropped/potential_locations4.png" />
-                  <img class= "img-responsive class" src="mail_drones/images/cropped/potential_locations2.png" />
-                  <img class= "img-responsive class" src="mail_drones/images/cropped/potential_locations.png" />
+                  <img class= "img-responsive class" src="mail_drones/images/potential_locations10.svg" />
+                  <img class= "img-responsive class" src="mail_drones/images/potential_locations8.svg" />
+                  <img class= "img-responsive class" src="mail_drones/images/potential_locations6.svg" />
+                  <img class= "img-responsive class" src="mail_drones/images/potential_locations4.svg" />
+                  <img class= "img-responsive class" src="mail_drones/images/potential_locations2.svg" />
+                  <img class= "img-responsive class" src="mail_drones/images/potential_locations.svg" />
                 </div>
            </div>
 </div>          
@@ -314,16 +309,9 @@
  <!-- Footer -->
     <section id="footer">
         <div class=" footer-section">
-            <div class="tsl-logo-area">
-                <!-- <br/><br/> -->
-                <a href="https://www.imperial.ac.uk" target="_blank"><img src="mail_drones/images/ICL_logo.svg" width="200" /></a>
-                <p>
-                    <a href="https://transport-systems.imperial.ac.uk" target="_blank" rel="noopener noreferrer">accessibility</a>
-                </p>
-            </div>
-            <div class="fmi-area">
-            <p>For more information,<br/>
-            <a href="mailto:senseable-contacts@mit.edu">mayar313@mit.edu</a></p>
+            <div class="icl-logo-area">
+                 <!-- <br/><br/>  -->
+                 <a href="https://www.imperial.ac.uk" target="_blank"><img src="mail_drones/images/ICL_logo.svg" width="140" /></a>
             </div>
             <br class="clearing" />
         </div>
