--- a/mail_drones.html
+++ b/mail_drones.html
@@ -50,7 +50,7 @@
 
             <div class="row gallery_row">
                 <h1>Mail Drones<br/></h1>
-                <div class="subtitle">Hyperlocal Last-mile Distribution Networks<br/>in London</div>
+                <div class="subtitle">Hyperlocal Last-mile Distribution Networks<br/>London</div>
             </div>
 
             <div class="photocontainer">
@@ -221,9 +221,8 @@
                         <b> 
                             The global increase in urban population directly affects the efficiency of existing
                             transportation
-                            systems. Demography is indeed correlated with car use. However, with technological progress, new
-                            solutions can be explored. One solution to reduce delays in transportation networks could be to
-                            implement Drone Mail delivery. "
+                            systems. Demography is indeed correlated with car use. With technological progress, new
+                            solutions are explored. Drone mail delivery system is assessed to reduce delays in transportation networks.
                         </b>
                     </div>
                     <br /><br />
