--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <meta name="og:title" content="Mayar Ariss">
     <meta name="og:description" content="Mayar Ariss - Researcher.">
     <meta name="og:image" content="https://mayar.me/site-thumbnail.jpg">
-    <meta name="og:url" content="https://mayarariss.com">
+    <meta name="og:url" content="https://mayar.me">
     <meta name="og:site_name" content="Mayar Ariss – Researcher">
     <meta name="og:locale" content="fr_FR">
     <meta name="og:type" content="website">
@@ -37,23 +37,37 @@
       <div class="line-vertical"></div>
   <div class="line-vertical line-right"></div>
   <div class="line-horizontal" style="--y-char:1"></div>
+  <!-- <div id="page-title" class="color-alt">
+    <span id="title">&nbsp;Projects&nbsp;</span>
+    <span id="filter-title"></span>
+  </div> -->
 
   <div id="projects" class="content scrollable-area">
     <div class="d-flex sticky-top bg-main text-uppercase">
-      <div class="flex-grow-1 col-title">Title</div>
+      <div class="flex-grow-1 bd-highlight col-title">Title</div>
       <div class="col-client d-none d-md-block">Institution</div>
       <div class="col-date">Date</div>
     </div>
     <div id="project-list scrollable-content">
-                              <a href="mail_drones.html" target="_blank" class="project d-flex " data-type="Animation">
+                              <a href="mail_drones.html" target="_blank" class="project d-flex " data-type="Imperial College London">
           <div class="flex-grow-1 col-title position-relative">Mail Drones</div>
-          <div class="col-client d-none d-md-block">IMPERIAL COLLEGE LONDON</div>
+          <div class="col-client d-none d-md-block">Imperial College London</div>
           <div class="col-date">2022</div>
         </a>
-                              <a href="nlsaadaptic.com" target="_blank" class="project d-flex " data-type="Animation">
+                              <a href="404notfound.com" target="_blank" class="project d-flex " data-type="Imperial College London">
           <div class="flex-grow-1 col-title position-relative">loading...</div>
           <div class="col-client d-none d-md-block"></div>
           <div class="col-date">2022</div>
+        </a>
+        <a href="404notfound.com" target="_blank" class="project d-flex " data-type="Imperial College London">
+          <div class="flex-grow-1 col-title position-relative">loading...</div>
+          <div class="col-client d-none d-md-block"></div>
+          <div class="col-date">2022</div>
+        </a>
+        <a href="404notfound.com" target="_blank" class="project d-flex " data-type="MIT">
+          <div class="flex-grow-1 col-title position-relative">loading...</div>
+          <div class="col-client d-none d-md-block"></div>
+          <div class="col-date">2023</div>
         </a>
           </div>
   </div>
