--- a/index.html
+++ b/index.html
@@ -37,10 +37,6 @@
       <div class="line-vertical"></div>
   <div class="line-vertical line-right"></div>
   <div class="line-horizontal" style="--y-char:1"></div>
-  <!-- <div id="page-title" class="color-alt">
-    <span id="title">&nbsp;Projects&nbsp;</span>
-    <span id="filter-title"></span>
-  </div> -->
 
   <div id="projects" class="content scrollable-area">
     <div class="d-flex sticky-top bg-main text-uppercase">
@@ -54,7 +50,12 @@
           <div class="col-client d-none d-md-block">Imperial College London</div>
           <div class="col-date">2022</div>
         </a>
-                              <a href="404notfound.com" target="_blank" class="project d-flex " data-type="Imperial College London">
+                              <a href="mind_your_step.html" target="_blank" class="project d-flex " data-type="Imperial College London">
+          <div class="flex-grow-1 col-title position-relative">Mind Your Step</div>
+          <div class="col-client d-none d-md-block">Imperial College London</div>
+          <div class="col-date">2022</div>
+        </a>
+        <a href="404notfound.com" target="_blank" class="project d-flex " data-type="Imperial College London">
           <div class="flex-grow-1 col-title position-relative">loading...</div>
           <div class="col-client d-none d-md-block"></div>
           <div class="col-date">2022</div>
@@ -62,7 +63,7 @@
         <a href="404notfound.com" target="_blank" class="project d-flex " data-type="Imperial College London">
           <div class="flex-grow-1 col-title position-relative">loading...</div>
           <div class="col-client d-none d-md-block"></div>
-          <div class="col-date">2022</div>
+          <div class="col-date">2023</div>
         </a>
         <a href="404notfound.com" target="_blank" class="project d-flex " data-type="MIT">
           <div class="flex-grow-1 col-title position-relative">loading...</div>
