--- a/mind_your_step.html
+++ b/mind_your_step.html
@@ -30,8 +30,7 @@
 </head>
 
 <body>
-    
-    <section class="openingvideo">
+    <!-- <section class="openingvideo">
 
         <div class="Intropage">
             <div>
@@ -43,7 +42,7 @@
             <div class="fillBackground" id="backgroundFill"></div>
         </div>
 
-    </section> 
+    </section> -->
 
 
 
