--- a/index.html
+++ b/index.html
@@ -1,6 +1,11 @@
 <!doctype html>
 <html lang="fr">
   <head>
+    
+    <meta http-equiv='cache-control' content='no-cache'> 
+    <meta http-equiv='expires' content='0'> 
+    <meta http-equiv='pragma' content='no-cache'>
+    
     <meta charset="utf-8"/>
     <meta name="description" content="">
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
