--- a/mind_your_step.html
+++ b/mind_your_step.html
@@ -20,6 +20,7 @@
     <meta property="og:url" content="https://mayarariss.com">
     <meta name="twitter:card" content="summary_large_image">
 
+    <!-- <link rel="icon" type="image/png" href="mys/assets/logos/tsl_logo.png"> -->
     <link href="https://fonts.googleapis.com/css2?family=Roboto+Slab:wght@100&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
         integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
@@ -29,7 +30,7 @@
 </head>
 
 <body>
-    <section class="openingvideo">
+    <!-- <section class="openingvideo">
 
         <div class="Intropage">
             <div>
@@ -41,15 +42,14 @@
             <div class="fillBackground" id="backgroundFill"></div>
         </div>
 
-    </section>
+    </section> -->
 
 
 
     <section class="header">
         <div class="row headers">
             <div>
-                <a href="https://transport-systems.imperial.ac.uk/" target="_blank"> <img class="logo"
-                        src="mys/assets/logos/tsl_logo.png" /></a>
+                <a href="https://transport-systems.imperial.ac.uk/" target="_blank"> <img class="logo" src="mys/assets/logos/tsl_logo.png" /></a>
             </div>
             <div class="Main_title">Mind Your Step</div>
         </div>
