--- a/index.html
+++ b/index.html
@@ -9,13 +9,13 @@
     <meta charset="utf-8">
     <title>Mayar Ariss – Researcher</title>
     <meta name="description" content="Mayar Ariss – Researcher">
-    <meta name="image" content="https://mayar.me/site-thumbnail.jpg">
+    <meta name="image" content="https://mayarariss.com/site-thumbnail.jpg">
     <meta itemprop="name" content="Mayar Ariss – Researcher">
     <meta itemprop="description" content="Mayar Ariss – Researcher">
-    <meta itemprop="image" content="https://mayar.me/site-thumbnail.jpg">
+    <meta itemprop="image" content="https://mayarariss.com/site-thumbnail.jpg">
     <meta name="og:title" content="Mayar Ariss">
     <meta name="og:description" content="Mayar Ariss - Researcher.">
-    <meta name="og:image" content="https://mayar.me/site-thumbnail.jpg">
+    <meta name="og:image" content="https://mayarariss.com/site-thumbnail.jpg">
     <meta name="og:url" content="https://mayar.me">
     <meta name="og:site_name" content="Mayar Ariss – Researcher">
     <meta name="og:locale" content="fr_FR">
