--- a/mind_your_step.html
+++ b/mind_your_step.html
@@ -30,7 +30,8 @@
 </head>
 
 <body>
-    <!-- <section class="openingvideo">
+    
+     <section class="openingvideo">
 
         <div class="Intropage">
             <div>
@@ -42,7 +43,7 @@
             <div class="fillBackground" id="backgroundFill"></div>
         </div>
 
-    </section> -->
+    </section> 
 
 
 
