--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
   <div id="about" class="content scrollable-area d-none">
     <div class="scrollable-content">
         <p class="mb-1">Born in Ohio, USA, to a Lebanese father and a Syrian mother, Mayar completed his secondary education in Paris, France. He studied propedeutics in environmental sciences and engineering at <a href="https://www.epfl.ch/" target="_blank" class="color-alt">EPFL</a>, in Lausanne, Switzerland. Mayar is now an MEng candidate in civil and environmental engineering at <a href="https://www.imperial.ac.uk/" target="_blank" class="color-alt">Imperial College London</a>.</p>
-        <p class="mb-1">With general engineering knowledge, Mayar began his research experience in the fields of econometric modelling of travel demand, transport markets pricing and evaluation, and network performance and equilibrium. He also gained expertise in nonlinear structural analysis and computational engineering analysis.</p>        
+        <p class="mb-1">With general engineering knowledge, Mayar began his research experience in the fields of econometric modelling of travel demand, and network performance and equilibrium. He also gained expertise in nonlinear structural analysis and computational engineering analysis.</p>        
         <p class="mb-1">Mayar is a student member at <a href="https://www.theiet.org" target="_blank" class="color-alt">IET</a>, <a href="https://www.ice.org.uk" target="_blank" class="color-alt">ICE</a>, and a permanent CEM YPN member of <a href="https://www.iucn.org/" target="_blank" class="color-alt">IUCN</a>, where he is part of the Urban and Mediterranean-type Ecosystems task forces.</p>
         <p class="mb-1">
         - <a href="mailto:mayar313@mit.edu" class="color-alt">Email</a> 
