--- a/index.html
+++ b/index.html
@@ -55,9 +55,14 @@
           <div class="col-client d-none d-md-block">Imperial College London</div>
           <div class="col-date">2022</div>
         </a>
-        <a href="404notfound.com" target="_blank" class="project d-flex " data-type="Imperial College London">
+                              <a href="404notfound.com" target="_blank" class="project d-flex " data-type="Imperial College London">
+          <div class="flex-grow-1 col-title position-relative">Contagious Songs</div>
+          <div class="col-client d-none d-md-block">Imperial College London</div>
+          <div class="col-date">2022</div>
+        </a>
+                              <a href="404notfound.com" target="_blank" class="project d-flex " data-type="Imperial College London">
           <div class="flex-grow-1 col-title position-relative">loading...</div>
-          <div class="col-client d-none d-md-block"></div>
+          <div class="col-client d-none d-md-block">Imperial College London</div>
           <div class="col-date">2022</div>
         </a>
       
