--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <meta name="og:title" content="Mayar Ariss">
     <meta name="og:description" content="Mayar Ariss - Researcher.">
     <meta name="og:image" content="https://mayarariss.com/site-thumbnail.jpg">
-    <meta name="og:url" content="https://mayar.me">
+    <meta name="og:url" content="https://mayarariss.com">
     <meta name="og:site_name" content="Mayar Ariss – Researcher">
     <meta name="og:locale" content="fr_FR">
     <meta name="og:type" content="website">
