--- a/index.html
+++ b/index.html
@@ -65,6 +65,11 @@
           <div class="col-client d-none d-md-block">MIT</div>
           <div class="col-date">2023</div>
         </a>
+                               <a href="loading.html" target="_blank" class="project d-flex " data-type="MIT">
+          <div class="flex-grow-1 col-title position-relative">loading...</div>
+          <div class="col-client d-none d-md-block"></div>
+          <div class="col-date">2023</div>
+        </a>
       
           </div>
   </div>
