--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
     <meta name="og:type" content="website">
     <title></title>
     <link rel="stylesheet" href="dist/css/style.min.css">
+    <link rel="icon" type="image/png" href="dist/pixelprof.png" />
     <script src="dist/js/site.min.js"></script>
   </head>
  
