--- a/mail_drones.html
+++ b/mail_drones.html
@@ -26,7 +26,8 @@
     
     <!--custom css-->
     <link href="mail_drones/css/style.css" rel="stylesheet" type="text/css">
-
+    
+    <link rel="icon" type="image/png" href="dist/pixelprof.png" />
 
 
 </head>
