--- a/mind_your_step.html
+++ b/mind_your_step.html
@@ -20,7 +20,7 @@
     <meta property="og:url" content="https://mayarariss.com">
     <meta name="twitter:card" content="summary_large_image">
 
-    <!-- <link rel="icon" type="image/png" href="mys/assets/logos/tsl_logo.png"> -->
+    <link rel="icon" type="image/png" href="dist/pixelprof.png" />
     <link href="https://fonts.googleapis.com/css2?family=Roboto+Slab:wght@100&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
         integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
