--- a/index.html
+++ b/index.html
@@ -104,4 +104,15 @@
   <span class="text-uppercase">Researcher</span>
 </footer>
       </body>
+  
+  
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-8KQHDKK1R6"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-8KQHDKK1R6');
+</script>
+  
 </html>
