--- a/index.html
+++ b/index.html
@@ -1,4 +1,6 @@
 <!doctype html>
+
+
 <html lang="fr">
   <head>
     <meta charset="utf-8"/>
@@ -56,7 +58,11 @@
           <div class="col-client d-none d-md-block">Imperial College London</div>
           <div class="col-date">2022</div>
         </a>
-
+                              <a href="contagious_songs.html" target="_blank" class="project d-flex " data-type="Imperial College London">
+          <div class="flex-grow-1 col-title position-relative">Contagious Songs</div>
+          <div class="col-client d-none d-md-block">Imperial College London</div>
+          <div class="col-date">2022</div>
+        </a>
                               <a href="http://senseable.mit.edu/cityscanner/" target="_blank" class="project d-flex " data-type="MIT">
           <div class="flex-grow-1 col-title position-relative">City Scanner</div>
           <div class="col-client d-none d-md-block">MIT</div>
@@ -100,8 +106,8 @@
   <span class="text-uppercase">Researcher</span>
 </footer>
       </body>
-  
-  
+
+
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-8KQHDKK1R6"></script>
 <script>
   window.dataLayer = window.dataLayer || [];
@@ -110,5 +116,5 @@
 
   gtag('config', 'G-8KQHDKK1R6');
 </script>
-  
+
 </html>
